--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -20,6 +20,7 @@
 \copyrightyear{2016} %Optional: same as \examyear if omitted
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
 \oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+%\switchmarks % Can be used to place marks to right of comments
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -52,7 +53,6 @@ Insert module-specific examination instructions here
 \begin{document}
 \maketitle
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Begin writing document below here
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -67,7 +67,7 @@ Inside solutions, notes can be added to the marks.\mk[Like this]{4}
 
 Automatically add up part marks inside the solution environment:
 
-\subtotal*[]
+\subtotal*
 
 After a subtotal, you can have some more marks.\mk{3}
 
