--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -17,6 +17,7 @@
 %\specsolnscolor{blue} % can be used to change text colour in specsolns mode
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
 \oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+%\switchmarks % Can be used to place marks to right of comments
 %% alternative way of updating the above information
 %\metadataset{faculty=STEM, 
 %            module title=Title of Module,
