--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -47,7 +47,8 @@ Insert module-specific examination instructions here
 %            faculty=STEM,
 %            multiple choice option text=choices,
 %            instructions= your instructions here,
-%            %top padding=0.5cm,
+%            top padding=0.5cm,
+% 			 switch marks, % Does same as \switchmarks
 %            }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
