--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -29,6 +29,7 @@
 %            multiple choice option text=choices,
 %            tutor only title={Title for tutor-only environment\par},
 %            student only title=Student material only\par,
+% 			 switch marks, % Does same as \switchmarks
 %            }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
