--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -154,6 +154,9 @@ Emulate the OUTeX intertext command using the (built-in) enumitem command.
     or \verb!\subtotal*[comment]! \mk 2 
   \item Totals can be calculated automatically using  \verb!\total*! 
     or \verb!\total*[comment]! \mk 3
+
+\subtotal*
+\item Marks that you don't want added to the subtotal/total counter can be inserted using \verb!\mk*! \mk* 2
 \end{enumerate}
 \subtotal*
 
