--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -66,6 +66,8 @@ Solutions can be placed in-line, to generate solution files from the same source
 
 Inside solutions, notes can be added to the marks.\mk[Like this]{4}
 
+You can display a mark but prevent it from getting added to the total and subtotal counters.\mk*[An alternative solution perhaps]{4}
+
 Automatically add up part marks inside the solution environment:
 
 \subtotal*
@@ -73,7 +75,6 @@ Automatically add up part marks inside the solution environment:
 After a subtotal, you can have some more marks.\mk{3}
 
 Rather than automatically adding up marks, you can specify a total or subtotal: 
-
 \subtotal{3}
 
 \total*
