--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -1,10 +1,9 @@
 \documentclass{ouab}
 % Options:
-%   oneassignment - mode that modifies table of contents for
-%                  ABs containing only one assignment.
-%   markcheck    - experimental version that checks whether part-marks
-%                  for a question add up to the stated marks for the
-%                  question.
+%   oneassignment   Mode that modifies table of contents for
+%                   ABs containing only one assignment.
+%   draft           Draft mode, checks whether part-marks for a question
+%                   add up to the stated marks for the question.
 % e.g. use \documentclass[oneassignment]{ouab}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
